    - Enhancements
      - Added a Message#bufferEntity() method to facilitate buffering of request and response
        entities/representations when they are transient but need to be consumed multiple times.
        Note that if not used properly, it can easily drain JVM memory.
      - Moved BufferingRepresentation from Engine to org.restlet.representation package.
    - Bug fixed
      - 

- 2.2 Milestone 5 (09/07/2013)
    - Bug fixed
       - Fixed issues #774, #778 - Removed default support of JavaBeans XML-deserialization, 
         binary-deserialization on ObjectRepresentation class.
         Reported by David Jorm.

- 2.2 Milestone 4 (08/23/2013)
    - Enhancements
       - Added GSon extension (#586).
         Contributed by Neal Mi.
       - OAuth extension has been upgraded to support final OAuth 2.0 specification.
         Contributed by Shotaro Uchida.
    - Bug fixed
       - Fixed issue #739 - copy extension headers from JAX-RS api to restlet response.
         Reported by Mark Kharitonov.
       - Fixed issue #774 - Removed default support of JavaBeans XML-serialization.
         Reported by David Jorm, Dinis Cruz, Abraham Kang and Alvaro Munoz.
       - Fixed issue #778 - Removed default support of JavaBeans binary-serialization.
         Reported by David Jorm.

- 2.2 Milestone 3 (03/07/2013)
    - Bug fixed
       - Fixed issue #737 - ExecutorService not set when calling WriterRepresentation#write.
         Reported by Tim Peierls.
       - Fixed issue #734 - Implementations of XmlHttpRequest in IE versions prior to IE10 turn 
         204 status into 1223. Reported by Koen Maes.

- 2.2 Milestone 2 (02/28/2013)
    - Enhancements
       - Upgraded Servlet API to version 3.0.1.
       - Updated Simple HTTP server library to version 5.0.4.
       - Added a JSONP filter that can automatically wrap JSON representations.
         Contributed by Mark Kharitonov and Cyril Lakech.
    - API changes