@@ -9,6 +9,7 @@ Changes log
         entities/representations when they are transient but need to be consumed multiple times.
         Note that if not used properly, it can easily drain JVM memory.
       - Moved BufferingRepresentation from Engine to org.restlet.representation package.
+      - Added client support for HTTP OAuth MAC authentication.
     - Bug fixed
       - 
 
